# private-package-in-gcp-tutorial

./: .env.template  .gitignore  README.md  pyproject.toml
.github/workflows/: register-package.yaml
src/your_own_private_package/: hello_world.py  main.py
