# For more info about the pyproject.toml file, see:
# https://xebia.com/blog/an-updated-guide-to-setuptools-and-pyproject-toml/

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "your-own-private-package"
dependencies = []
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.name@email.com"},
]
description = "An Example Project"
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = []

[tool.setuptools_scm]
version_file = "src/your_own_private_package/_version.py"
